--- a/themes/berbera/layouts/technical_note/single.html
+++ b/themes/berbera/layouts/technical_note/single.html
@@ -54,7 +54,7 @@
   <div class="technical_note">
     <header>
       <div class="alert alert-warning flashcard_ad" role="alert">
-	Want to learn machine learning? Try my <a href="https://machinelearningflashcards.com" class="alert-link">machine learning flashcards</a>, <a href='https://amzn.to/2HwnWty' class="alert-link">book</a>, or <a href='https://www.youtube.com/channel/UCnd4Fi-ODvuPbxR2fO2j7kA' class="alert-link">study with me.</a>.
+	Do you want to try out this notebook? Get a free account (no credit-card reqd) at <a href="https://hopsworks.ai" class="alert-link">hopsworks.ai</a>.<p/> You can also install <a href='https://github.com/logicalclocks/hopsworks' class="alert-link">open-source Hopsworks</a> or view <a href='https://www.youtube.com/playlist?list=PLgN6fhzkSui8xncwOtnAd4wVtileiu5cI' class="alert-link">tutorial videos here.</a>
       </div>
       <h1 class="technical_note_title">{{ .Title }}</h1>
       <div class="technical_note_date">
@@ -68,7 +68,7 @@
     <aside>
       <div class="bug_reporting">
 	<h4>Find an error or bug?</h4>
-	<p>Everything on this site is available on GitHub. Head to <a href='https://github.com/chrisalbon/notes/issues/new'>and submit a suggested change</a>. Include the tutorial's URL in the issue.</p>
+	<p>Everything on this site is available on GitHub. Head to <a href='https://github.com/logicalclocks/hops-examples/issues/new'>and submit a suggested change</a>. Include the notebook's name in the issue.</p>
       </div>
     </aside>
 
