--- a/themes/berbera/layouts/index.html
+++ b/themes/berbera/layouts/index.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <h1>
-                        <span class="minor_line">Feature Store with Python, (Py)Spark, TensorFlow, PyTorch</span>
+                        <span class="minor_line">Python, PySpark, Spark, TensorFlow, Scikit-Learn, PyTorch</span>
                         <br>
                     <span class="major_line">Example Hopsworks Feature Store Notebooks</span>
 <!--                    <br>
@@ -24,7 +24,7 @@
 
         <div class="row" id="hsfs">
             <div class="col-sm-12">
-                <h3 class="category_header">hsfs</h3>
+                <h3 class="category_header">The Feature Store API: hsfs</h3>
             </div>
         </div>
 
