--- a/themes/berbera/layouts/index.html
+++ b/themes/berbera/layouts/index.html
@@ -6,7 +6,7 @@
                 <h1>
                         <span class="minor_line">Python, PySpark, Spark, TensorFlow, Scikit-Learn, PyTorch</span>
                         <br>
-                    <span class="major_line">Example Hopsworks Feature Store Notebooks</span>
+                    <span class="major_line">Example Hopsworks Notebooks</span>
 <!--                    <br>
                     <span class="minor_line"></span>
 -->
@@ -16,8 +16,7 @@
 
         <div class="row">
             <div class="col-sm-12 blurb">
-              <p>This page contains examples of Feature Engineering, Feature Ingestion, Training Dataset Creating,
-		Model Training, and Model Serving on the Hopsowrks platform.</p>
+              <p>This page contains example notebooks for Feature Engineering, Feature Ingestion, Feature Selection/Joining, Training Dataset Creating,	Model Training, and Model Serving on Hopsworks.</p>
             </div>
         </div>
 
@@ -247,7 +246,7 @@
 	
         <div class="row" id="connectors">
             <div class="col-sm-12">
-                <h3 class="category_header">Snowflake</h3>
+                <h3 class="category_header">Snowflake ingestion into Feature Store</h3>
             </div>
         </div>
         <div class="row">
