--- a/themes/berbera/static/css/custom.css
+++ b/themes/berbera/static/css/custom.css
@@ -243,8 +243,8 @@ Homepage
 }
 
 .homepage h3.category_header {
-  background-color: #f7f6f6;
-  color: rgb(84, 84, 84);
+  background-color: #1DB181;
+  color: rgb(255, 255, 255);
   padding: 10px 20px 10px 20px;
   border: solid 1px #e6e6e6;
   margin-bottom: 20px;
