--- a/themes/berbera/layouts/index.html
+++ b/themes/berbera/layouts/index.html
@@ -6,7 +6,7 @@
                 <h1>
                         <span class="minor_line">Python, PySpark, Spark, TensorFlow, Scikit-Learn, PyTorch</span>
                         <br>
-                    <span class="major_line">Example Hopsworks Notebooks</span>
+                    <span class="major_line">Example Notebooks</span>
 <!--                    <br>
                     <span class="minor_line"></span>
 -->
