use http:// not https://

--- a/themes/berbera/layouts/_default/baseof.html
+++ b/themes/berbera/layouts/_default/baseof.html
@@ -40,7 +40,7 @@
 
     <nav class="navbar navbar-expand-sm fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="https://examples.hopsworks.ai">Hopsworks Examples</a>
+            <a class="navbar-brand" href="http://examples.hopsworks.ai">Hopsworks Examples</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
