Add google analytics

--- a/themes/berbera/layouts/index.html
+++ b/themes/berbera/layouts/index.html
@@ -1,6 +1,15 @@
 {{ define "main" }}
 <main>
-    <div class="homepage">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EKVXL1ZK2D"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-EKVXL1ZK2D');
+  </script>
+  
+  <div class="homepage">    
         <div class="row">
             <div class="col-sm-12">
                 <h1>
