make title colors green

--- a/themes/berbera/static/css/custom.css
+++ b/themes/berbera/static/css/custom.css
@@ -345,7 +345,8 @@ p>.mjx-chtml {
 }
 
 .technical_note h1, .page h1{
-  font-size: 1.8rem;
+    font-size: 1.8rem;
+    color: #1EB382;
 }
 
 .technical_note h2{
