--- a/themes/berbera/layouts/index.html
+++ b/themes/berbera/layouts/index.html
@@ -126,6 +126,23 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="card">
+                    <h4 class="card-header" id="hsfs_tags">Feature Store Tags</h4>
+                    <div class="card-body">
+                        <ul>
+                            {{ range (where .Pages "File.Dir" "in" "/featurestore/hsfs/tags/").ByTitle }}
+                            <li>
+                                <a href="{{.Permalink}}">{{.Title}}</a>
+                            </li>
+                            {{ end }}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="row" id="aws">
             <div class="col-sm-12">
                 <h3 class="category_header">AWS and the Feature Store</h3>
