--- a/themes/berbera/layouts/index.html
+++ b/themes/berbera/layouts/index.html
@@ -39,6 +39,20 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
+                    <h4 class="card-header" id="gcp">Try now in Colab</h4>
+                    <div class="card-body">
+                        <ul>
+                            {{ range (where .Pages "File.Dir" "in" "/featurestore/gcp/").ByTitle }}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+	
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="card">
                     <h4 class="card-header" id="hsfs_basics">Basics</h4>
                     <div class="card-body">
                         <ul>
@@ -142,7 +156,7 @@
                 </div>
             </div>
         </div>
-
+  
         <div class="row" id="aws">
             <div class="col-sm-12">
                 <h3 class="category_header">AWS and the Feature Store</h3>
@@ -257,6 +271,23 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="card">
+                    <h4 class="card-header" id="what-if-tol">What-if-Tool Feature Analytics</h4>
+                    <div class="card-body">
+                        <ul>
+                            {{ range (where .Pages "File.Dir" "in" "/featurestore/feature-bias/").ByTitle }}
+                            <li>
+                                <a href="{{.Permalink}}">{{.Title}}</a>
+                            </li>
+                            {{ end }}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+	
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
@@ -507,4 +538,3 @@
 
 </main>
 {{ end }}
-
