--- a/themes/berbera/layouts/index.html
+++ b/themes/berbera/layouts/index.html
@@ -16,9 +16,6 @@
                         <span class="minor_line">Python, PySpark, Spark, TensorFlow, Scikit-Learn, PyTorch</span>
                         <br>
                     <span class="major_line">Feature Store Notebooks</span>
-<!--                    <br>
-                    <span class="minor_line"></span>
--->
                 </h1>
             </div>
         </div>
@@ -271,7 +268,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" id="what-if">
             <div class="col-sm-12">
                 <div class="card">
                     <h4 class="card-header" id="what-if-tol">What-if-Tool Feature Analytics</h4>
@@ -286,7 +283,7 @@
                     </div>
                 </div>
             </div>
-
+	</div>
 	
         <div class="row">
             <div class="col-sm-12">
