Snowflake Examples missing, Colab example (#212)
* missing snowflake examples
* colab example

--- a/themes/berbera/layouts/index.html
+++ b/themes/berbera/layouts/index.html
@@ -16,9 +16,6 @@
                         <span class="minor_line">Python, PySpark, Spark, TensorFlow, Scikit-Learn, PyTorch</span>
                         <br>
                     <span class="major_line">Feature Store Notebooks</span>
-<!--                    <br>
-                    <span class="minor_line"></span>
--->
                 </h1>
             </div>
         </div>
@@ -36,6 +33,24 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="card">
+                    <h4 class="card-header" id="colab_example">Try now on Colab</h4>
+                    <div class="card-body">
+                        <ul>
+                          {{ range (where .Pages "File.Dir" "in" "/featurestore/gcp/").ByTitle }}
+                            <a href="https://colab.research.google.com/github/jimdowling/hops-examples/blob/examples_missing/notebooks/featurestore/gcp/colab.ipynb">
+			      <img src="/featurestore/images/colab-64px.png" alt="Colab" width="64" height="64">
+			      Run example in Google Colab
+                            </a>			  
+                            {{ end }}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+	
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
@@ -158,7 +173,7 @@
                 </div>
             </div>
         </div>
-
+  
         <div class="row" id="aws">
             <div class="col-sm-12">
                 <h3 class="category_header">AWS and the Feature Store</h3>
@@ -273,6 +288,23 @@
             </div>
         </div>
 
+        <div class="row" id="what-if">
+            <div class="col-sm-12">
+                <div class="card">
+                    <h4 class="card-header" id="what-if-tol">What-if-Tool Feature Analytics</h4>
+                    <div class="card-body">
+                        <ul>
+                            {{ range (where .Pages "File.Dir" "in" "/featurestore/feature-bias/").ByTitle }}
+                            <li>
+                                <a href="{{.Permalink}}">{{.Title}}</a>
+                            </li>
+                            {{ end }}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+	</div>
+	
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
@@ -311,7 +343,7 @@
                     <h4 class="card-header" id="snowflake_pyspark">Snowflake ingestion to the Feature Store</h4>
                     <div class="card-body">
                         <ul>
-                            {{ range (where .Pages "File.Dir" "in" "/featurestore/snowflake/").ByTitle }}
+                            {{ range (where .Pages "File.Dir" "in" "/featurestore/hsfs/snowflake/").ByTitle }}
                             <li>
                                 <a href="{{.Permalink}}">{{.Title}}</a>
                             </li>
@@ -523,4 +555,3 @@
 
 </main>
 {{ end }}
-
