[HOPSWORKS-2424] Attach transformation function to training dataset (#218)

--- a/themes/berbera/layouts/index.html
+++ b/themes/berbera/layouts/index.html
@@ -124,6 +124,23 @@
         </div>
 
         <div class="row">
+          <div class="col-sm-12">
+              <div class="card">
+                  <h4 class="card-header" id="hsfs_online_transformations">Online transformations</h4>
+                  <div class="card-body">
+                      <ul>
+                          {{ range (where .Pages "File.Dir" "in" "/featurestore/hsfs/online_transformations/").ByTitle }}
+                          <li>
+                              <a href="{{.Permalink}}">{{.Title}}</a>
+                          </li>
+                          {{ end }}
+                      </ul>
+                  </div>
+              </div>
+          </div>
+        </div>
+
+        <div class="row">
             <div class="col-sm-12">
                 <div class="card">
                     <h4 class="card-header" id="hsfs_validation">Data Validation</h4>
