--- a/themes/berbera/layouts/index.html
+++ b/themes/berbera/layouts/index.html
@@ -407,10 +407,15 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
-                    <h4 class="card-header" id="parallel-exp">Hyperparameter Tuning</h4>
+                    <h4 class="card-header" id="parallel-exp">Maggy - Distributed Transparent ML </h4>
                     <div class="card-body">
                         <ul>
                             {{ range (where .Pages "File.Dir" "in" "/featurestore/ml/Maggy/Hopsworks/").ByTitle }}
+                            <li>
+                                <a href="{{.Permalink}}">{{.Title}}</a>
+                            </li>
+                            {{ end }}
+                            {{ range (where .Pages "File.Dir" "in" "/featurestore/ml/Maggy/Hopsworks/ImageNet").ByTitle }}
                             <li>
                                 <a href="{{.Permalink}}">{{.Title}}</a>
                             </li>
